--- a/.github/workflows/create_windows_app.yml
+++ b/.github/workflows/create_windows_app.yml
@@ -12,18 +12,22 @@ jobs:
       with:
         submodules: 'recursive'
 
-    - name: Setup Miniconda
+    - name: Install Miniconda
       run: |
         $conda_url = 'https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe'
         Invoke-WebRequest $conda_url -OutFile miniconda.exe
         Start-Process miniconda.exe -ArgumentList '/InstallationType=JustMe', '/AddToPath=0', '/RegisterPython=0', '/S', '/D=%USERPROFILE%\miniconda' -NoNewWindow -Wait
-        $Env:Path += ";$Env:USERPROFILE\miniconda\Scripts;$Env:USERPROFILE\miniconda"
-        conda config --set always_yes yes --set changeps1 no
-        conda update -q conda
-        conda install -c conda-forge mamba
+        echo "Adding Miniconda to the PATH"
+        $env:Path += ";$env:USERPROFILE\miniconda;$env:USERPROFILE\miniconda\Scripts;$env:USERPROFILE\miniconda\condabin"
+        conda init powershell
+        powershell -ExecutionPolicy ByPass -File $PROFILE
 
     - name: Setup build environment
+      shell: bash
       run: |
+        source $HOME/miniconda/etc/profile.d/conda.sh
+        conda config --set always_yes yes --set changeps1 no
+        conda update -q conda
         mamba create -q -n test-environment -c conda-forge -c bioconda meson mingw-w64 samtools
         conda activate test-environment
         set CC=x86_64-w64-mingw32-gcc
@@ -32,17 +36,23 @@ jobs:
         meson setup --buildtype=release --prefix=%cd%\app --bindir=. --unity on builddir
 
     - name: Meson Compile
+      shell: bash
       run: |
+        source $HOME/miniconda/etc/profile.d/conda.sh
         conda activate test-environment
         meson compile -C builddir
 
     - name: Meson Test
+      shell: bash
       run: |
+        source $HOME/miniconda/etc/profile.d/conda.sh
         conda activate test-environment
         meson test -C builddir
 
     - name: Meson Install
+      shell: bash
       run: |
+        source $HOME/miniconda/etc/profile.d/conda.sh
         conda activate test-environment
         meson install -C builddir
 
