--- a/.github/workflows/create_windows_app.yml
+++ b/.github/workflows/create_windows_app.yml
@@ -6,57 +6,39 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
 
-    - name: Install Miniconda
-      run: |
-        $conda_url = 'https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe'
-        Invoke-WebRequest $conda_url -OutFile miniconda.exe
-        Start-Process miniconda.exe -ArgumentList '/InstallationType=JustMe', '/AddToPath=0', '/RegisterPython=0', '/S', '/D=%USERPROFILE%\miniconda' -NoNewWindow -Wait
-        echo "Adding Miniconda to the PATH"
-        $env:Path += ";$env:USERPROFILE\miniconda;$env:USERPROFILE\miniconda\Scripts;$env:USERPROFILE\miniconda\condabin"
-        conda init powershell
-        powershell -ExecutionPolicy ByPass -File $PROFILE
+    - name: Install MSYS2
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
+        install: mingw-w64-x86_64-toolchain
+        update: true
 
-    - name: Setup build environment
-      shell: bash
+    - name: Install dependencies
+      shell: msys2 {0}
       run: |
-        source $HOME/miniconda/etc/profile.d/conda.sh
-        conda config --set always_yes yes --set changeps1 no
-        conda update -q conda
-        mamba create -q -n test-environment -c conda-forge -c bioconda meson mingw-w64 samtools
-        conda activate test-environment
-        set CC=x86_64-w64-mingw32-gcc
-        set CXX=x86_64-w64-mingw32-g++
-        set WINDRES=x86_64-w64-mingw32-windres
-        meson setup --buildtype=release --prefix=%cd%\app --bindir=. --unity on builddir
+        pacman -S --noconfirm ninja meson mingw-w64-x86_64-gcc
 
-    - name: Meson Compile
-      shell: bash
+    - name: Configure and build with Meson
+      shell: msys2 {0}
       run: |
-        source $HOME/miniconda/etc/profile.d/conda.sh
-        conda activate test-environment
+        meson setup --buildtype=release --prefix=$(pwd)/app --bindir=. --unity on builddir
         meson compile -C builddir
 
-    - name: Meson Test
-      shell: bash
+    - name: Install the application
+      shell: msys2 {0}
       run: |
-        source $HOME/miniconda/etc/profile.d/conda.sh
-        conda activate test-environment
-        meson test -C builddir
-
-    - name: Meson Install
-      shell: bash
-      run: |
-        source $HOME/miniconda/etc/profile.d/conda.sh
-        conda activate test-environment
         meson install -C builddir
 
-    - name: Create executable artifact
+    - name: Make executable
+      run: |
+        chmod +x app/PretextView.exe
+
+    - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
         name: PretextView
