--- a/.github/workflows/create_windows_app.yml
+++ b/.github/workflows/create_windows_app.yml
@@ -19,6 +19,7 @@ jobs:
           mingw-w64-x86_64-toolchain
           mingw-w64-x86_64-python3
           mingw-w64-x86_64-meson
+          mingw-w64-x86_64-cmake
           mingw-w64-x86_64-ninja
         update: true
 
