--- a/.github/workflows/create_windows_app.yml
+++ b/.github/workflows/create_windows_app.yml
@@ -18,38 +18,34 @@ jobs:
         choco install ninja
         choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
         choco install mingw
-        RefreshEnv
 
-    - name: Set up MinGW
-      shell: bash
+    - name: Set up MinGW Path
       run: |
-        echo "Setting up MinGW environment"
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
-        pacman -Syu --noconfirm
-        pacman -S --noconfirm mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake mingw-w64-x86_64-pkg-config
+        $env:PATH += ";C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin"
+        Write-Host "MinGW added to PATH: $env:PATH"
 
     - name: Configure Meson Build
       shell: bash
       run: |
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export PATH=/C/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/bin:$PATH
         meson setup --buildtype=release --prefix=$(pwd)/PretextView_build builddir
 
     - name: Compile with Ninja
       shell: bash
       run: |
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export PATH=/C/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/bin:$PATH
         ninja -C builddir
 
     - name: Run Meson Tests
       shell: bash
       run: |
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export PATH=/C/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/bin:$PATH
         ninja -C builddir test
 
     - name: Install Executable
       shell: bash
       run: |
-        export PATH=/C/tools/msys64/mingw64/bin:$PATH
+        export PATH=/C/ProgramData/chocolatey/lib/mingw/tools/install/mingw64/bin:$PATH
         ninja -C builddir install
 
     - name: Package Executable
