--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -34,7 +34,7 @@ jobs:
 
         # Install required tools via mamba
         conda install -c conda-forge mamba
-        mamba create -q -n test-environment -c conda-forge -c bioconda -y meson clangxx_win-64 samtools
+        mamba create -q -n test-environment -c conda-forge -c bioconda -y meson clangxx_win-64
 
     - name: Setup Meson
       run: |
