--- a/.github/workflows/windowsbuild.yml
+++ b/.github/workflows/windowsbuild.yml
@@ -1,79 +1,63 @@
 name: test
-
 on:
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+    
+    - name: Setup Miniconda
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        auto-update-conda: true
+        python-version: 3.10
+        activate-environment: test-environment
+        environment-file: false
 
-    - name: Setup Conda
+    - name: Install Build Dependencies
+      shell: powershell
       run: |
-        # Download Miniconda installer
-        $conda_url = "https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe"
-        Invoke-WebRequest -Uri $conda_url -OutFile miniconda.exe
-
-        # Install Miniconda silently
-        Start-Process -Wait -FilePath .\miniconda.exe -ArgumentList "/InstallationType=JustForMe", "/AddToPath=1", "/S", "/D=$env:USERPROFILE\miniconda"
-
-        # Set the conda environment to the newly installed Miniconda
-        $env:PATH = "$env:USERPROFILE\miniconda\Scripts;$env:USERPROFILE\miniconda\Scripts\conda;$env:USERPROFILE\miniconda\Library\bin;$env:PATH"
-
-        # Activate Conda environment
-        & "$env:USERPROFILE\miniconda\Scripts\activate.bat"
-
-        # Configure Conda environment
-        conda config --set always_yes yes --set changeps1 no
-        conda update -q conda
-        conda info -a
-
-        # Install required tools via mamba
-        conda install -c conda-forge mamba
-        mamba create -q -n test-environment -c conda-forge -c bioconda -y meson clangxx_win-64
-
-    - name: Setup Meson
+        conda install -c conda-forge -y meson ninja clangxx cmake pkg-config
+        conda list
+    
+    - name: Verify Meson Installation
+      shell: powershell
       run: |
-        # Activate the test environment
-        & "$env:USERPROFILE\miniconda\Scripts\activate.bat" test-environment
-        
-        # Set the necessary environment variables for Meson build
+        conda run -n test-environment meson --version
+        conda run -n test-environment which meson
+    
+    - name: Configure Build
+      shell: powershell
+      run: |
         $env:CC = "clang"
-        $env:CXX = "clang"
-        $env:MACOSX_DEPLOYMENT_TARGET = "10.10"  # Although this is for macOS, leaving it here for completeness
-        meson setup --buildtype=release --prefix=%cd%\build\PretextView --bindir=bin --unity on builddir
-
-    - name: Meson Compile
+        $env:CXX = "clang++"
+        conda run -n test-environment meson setup `
+          --buildtype=release `
+          --prefix="${{ github.workspace }}\build\PretextView" `
+          --bindir=bin `
+          --unity on `
+          builddir
+    
+    - name: Compile Project
+      shell: powershell
       run: |
-        & "$env:USERPROFILE\miniconda\Scripts\activate.bat" test-environment
-        cd builddir
-        meson compile
-
-    - name: Meson Test
+        conda run -n test-environment meson compile -C builddir
+    
+    - name: Run Tests
+      shell: powershell
       run: |
-        & "$env:USERPROFILE\miniconda\Scripts\activate.bat" test-environment
-        cd builddir
-        meson test
-
-    - name: Meson Install
+        conda run -n test-environment meson test -C builddir
+    
+    - name: Install Project
+      shell: powershell
       run: |
-        & "$env:USERPROFILE\miniconda\Scripts\activate.bat" test-environment
-        cd builddir
-        meson install
-
-    - name: Make Executable
-      run: |
-        # Ensure the executable is built and ready to go (on Windows, executables are inherently runnable)
-        echo "Ensuring executable is built"
-
-    - name: Create Artifact
+        conda run -n test-environment meson install -C builddir
+    
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: PretextView
-        path: build\bin\PretextView.exe
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        path: builddir\bin\PretextView.exe
